Remove JNI references from documentation and Java code
Streamline documentation and codebase for FFM-only Java support (21+):
  Documentation updates:
  - README.md: Update Java badge to 21+, change JniPluginLoader to FfmPluginLoader,
    move installation instructions, update tutorial table (renumber 5-8 to 1-4)
  - GETTING_STARTED.md: Remove installation steps (now in README), add prerequisites
  - tutorials/README.md: Restructure chapters, remove JNI references
  - ARCHITECTURE.md: Remove JNI from version table and crate diagram
  - TESTING_JAVA.md: Update all JNI references to FFM
  - BENCHMARK_RESULTS.md: Add deprecation note for historical JNI benchmarks
  - CONTRIBUTING.md: Remove JNI from prerequisites and project structure

  Tutorial restructuring:
  - Delete chapters 01-04 (regex-plugin, kotlin-consumer, json-plugin, java-consumer)
  - Rename chapters 05-08 to 01-04
  - Delete obsolete examples (json-plugin, regex-plugin, kotlin-examples)

  Java code updates:
  - BundleLoader.java: Remove JNI bridge extraction methods and BridgeInfo
  - FfmPlugin.java, FfmPluginLoader.java: Remove JNI comparison from javadocs
  - TransportBenchmark.java: Update javadoc description
  - rustbridge-core/build.gradle.kts: Update Java target from 17 to 21
  - templates/kotlin/README.md: Change "using JNI" to "using FFM"